[gd_scene load_steps=4 format=3 uid="uid://bu3v7nawiwh3g"]

[ext_resource type="Script" path="res://scripts/ui/menu_screen.gd" id="1_lvvk2"]
[ext_resource type="PackedScene" uid="uid://dhq6gwi1ppa8l" path="res://scenes/ui/menu/menu_button.tscn" id="1_trwdp"]
[ext_resource type="Texture2D" uid="uid://b6xsei5ip0cwf" path="res://graphics/background.png" id="5_pwi4p"]

[node name="MenuScreen" type="CanvasLayer"]
script = ExtResource("1_lvvk2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(160, 0)
alignment = 1

[node name="Play" parent="VBoxContainer" instance=ExtResource("1_trwdp")]
layout_mode = 2

[node name="Options" parent="VBoxContainer" instance=ExtResource("1_trwdp")]
layout_mode = 2

[node name="Quit" parent="VBoxContainer" instance=ExtResource("1_trwdp")]
layout_mode = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("5_pwi4p")
centered = false

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
